--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,45 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    
+    ext {
+        // App version
+        versionName = '1.0'
+        versionCode = 1
+
+        // SDK and tools
+        compileSdkVersion = 28
+        minSdkVersion = 21
+        targetSdkVersion = 28
+
+        // kotlin
+        kotlinVersion = '1.2.51'
+
+        // android stuff
+        supportVersion = '28.0.0'
+        constraintVersion = '1.1.3'
+
+        // tests
+        junitVersion = '4.12'
+        mockitoVersion = '2.23.0'
+        espressoVersion = '3.0.1'
+
+        // di and dagger 2
+        javaxInjectVersion = '1'
+        daggerVersion = '2.14.1'
+        dagger = "2.16"
+
+        //rx
+        rxKotlinVersion = '2.2.0'
+        rxandroidVersion = '2.1.0'
+
+        // aac
+        architectureComponentVersion = '1.1.1'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
