--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     implementation project(':domain')
-   // implementation project(':data')
+    implementation project(':data')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // android stuff
